# pliny

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BUILD.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  spec.md  user_stories.md
.github/workflows/: ci.yml
docker/: api.Dockerfile  bot.Dockerfile  frontend.Dockerfile  workers.Dockerfile
frontend/: .gitignore  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  auth.ts  main.tsx  state.ts
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_hnsw_indexes.py  0003_wayback_fallback_version.py
pliny/: __init__.py  canonicalize.py  cli.py  config.py  logging.py  media_hosts.py
pliny/api/: app.py  deps.py
pliny/bot/: config.py  dispatcher.py  pliny_client.py  poller.py  runner.py  telegram_api.py
pliny/db/: models.py  neo4j.py  queries.py
pliny/graph/: rebuild.py  schema.py  sync.py
pliny/llm/: base.py  cost_cap.py  openai_impl.py  rate_limit.py
pliny/pipeline/: __init__.py  context.py  stages.py
pliny/prompts/: entities.py  summarize.py  vision_ocr.py
pliny/schemas/: admin.py  api.py  metadata.py  search.py
pliny/snapshot/: __init__.py  base.py  classifier.py  merge.py  playwright_impl.py
pliny/storage/: blob.py  filesystem.py  rustfs.py
pliny/workers/: pool.py  retry.py  runner.py  sweeper.py
tests/: conftest.py
tests/integration/: test_admin_jobs.py  test_admin_rebuild_graph.py  test_admin_reprocess.py  test_app_lifespan.py  test_bot_e2e.py  test_chunk.py  test_cors.py  test_delete_item.py  test_embed.py  test_entities.py  test_extract_image.py  test_extract_text.py  test_health.py  (+17 more)
(+51 files in other folders)
